css styling and added inner div to format with grid to be able to place items in correct position

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div class="left-body">
     <h2 id="new-activity">New Activity</h2>
     <div id="inner-left">
-      <h3>Select A category</h3>
+      <div id="content-box">
+        <h3>Select a category:</h3>
+      </div>
     </div>
   </div>
   </body>
