refactor of existing code to be more nested

--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="styles.css">
-    <nav class="topnav">
-      <div>
-        <h2 id="title">INTENTION TIMER</h2>
-      </div>
-    </nav>
+    <title>Intention Timer</title>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-  <div class="left-body">
-    <h2 id="new-activity">New Activity</h2>
-    <div id="inner-left">
-      <div id="content-box">
-        <h3>Select a category:</h3>
-      </div>
-    </div>
-  </div>
+    <header>
+      <h1>Intention Timer</h1>
+    </header>
+    <main class="new-intention-page">
+      <h2>New Activity</h2>
+      <section>
+        <div class="container">
+          <h3>Select a category:</h3>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
