--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       <section>
         <div class="container">
           <h3>Select a category:</h3>
+          <section class='button-container'>
+            <button class="study-button" type="button">
+              <img class="study" src="assets/study.svg" id="blank-study" />
+              <h3 class="in-button">Study</h3>
+            </button>
+            <button class="study-button" type="button">
+              <img class="study" src="assets/meditate.svg" id="blank-study" />
+              <h3 class="in-button">Meditate</h3>
+            </button>
+            <button class="study-button" type="button">
+              <img class="study" src="assets/exercise.svg" id="blank-study" />
+              <h3 class="in-button">Exercise</h3>
+            </button>
+          </section>
         </div>
       </section>
     </main>
