--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
         </div>
       </section>
     </main>
+    <aside>
+      <h2>Past Activities</h2>
+      <div class="aside-section">
+        <p>You haven't logged any activities yet.</p>
+        <p>Complete the form to the left to get started!</p>
+      </div>
+    </aside>
   </body>
 </html>
